--- a/interpolasi.ipynb
+++ b/interpolasi.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sample tp"
+    "#### Sample json-like data"
    ]
   },
   {
@@ -45,13 +45,6 @@
     "\n",
     "for i, entry in enumerate(tp):\n",
     "    entry['value'] = normalized_values[i]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Sample t2m"
    ]
   },
   {
@@ -260,25 +253,13 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "dates = [entry['date'] for entry in result]\n",
-    "# t2m_values = [entry['t2m'] if entry['t2m'] is not None else float('nan') for entry in result]\n",
     "tp_values = [entry['tp'] if entry['tp'] is not None else float('nan') for entry in result]\n",
-    "\n",
-    "# Create a figure and axis\n",
     "fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "\n",
-    "# Plot 't2m' values\n",
-    "# ax.plot(dates, t2m_values, marker='o', linestyle='-')\n",
     "ax.plot(dates, tp_values, marker='o', linestyle='-')\n",
-    "\n",
-    "# Set labels and title\n",
     "ax.set_xlabel('Date')\n",
     "ax.set_ylabel('t2m Values')\n",
     "ax.set_title('Time Series of t2m Values')\n",
-    "\n",
-    "# Rotate x-axis labels for better visibility\n",
     "plt.xticks(rotation=45)\n",
-    "\n",
-    "# Show the plot\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
